Added Members Page, Footer and Icons

--- a/index.html
+++ b/index.html
@@ -2,20 +2,23 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title>Never Offical</title>
+        <title>:: Never Offical ::</title>
         <link rel="icon" href="../images/never.png">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+        
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Squada+One">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
         <link rel="stylesheet" href="../styling/index.css">
     </head>
     <body>
         <header>
-            <h1>Never</h1>
+            <a href="index.html">
+                <h1>Never</h1>
+            </a>
             <nav>
-                <a href="#about-us">Home</a>
-                <a href="#covers">Covers</a>
-                <a href="#members">Members</a>
-                <a href="#audition">Auditions</a>
+                <a href="#">Merch</a>
+                <a href="members.html">Members</a>
+                <a href="#">Auditions</a>
             </nav>
         </header>
         <main>
@@ -23,14 +26,27 @@
             <p>Check out our lastest cover!</p>
 
             <div class="lastest-cover">
-                <iframe width="320" height="180" src="https://www.youtube.com/embed/UaDNQRjlJdo"
+                <iframe width="160" height="90" src="https://www.youtube.com/embed/UaDNQRjlJdo"
                 frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen>
                 </iframe>
             </div>
         </main>
+        <svg width="100" height="100">
+            <circle cx="50" cy="50" r="40" 
+            stroke="gainsboro" stroke-width="4" fill="dimgrey" />
+            Sorry, your browser does not support inline SVG.
+        </svg>
         <footer>
-
+            <a href="https://www.instagram.com/neverofficialyyc/" target="_blank">
+                <i class="fab fa-instagram fa-lg"></i>
+            </a>
+            <a href="https://www.facebook.com/neverofficialyyc/" target="_blank">
+                <i class="fab fa-facebook fa-lg"></i>
+            </a>
+            <a href="https://www.youtube.com/channel/UCN76HJCEOipjDLIB5bYMexw/" target="_blank">
+                <i class="fab fa-youtube fa-lg"></i>
+            </a>
         </footer>
     </body>
 </html>
