--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title>:: Never Offical ::</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Never Offical</title>
         <link rel="icon" href="../images/never.png">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <script src="https://kit.fontawesome.com/a076d05399.js"></script>
@@ -12,17 +13,30 @@
     </head>
     <body>
         <header>
-            <a href="index.html">
-                <h1>Never</h1>
-            </a>
+            <div class="logo-container">
+                <a href="index.html">
+                    <img src="../images/never.png" alt="Never" class="header-logo">
+                    <h1>Never</h1>
+                </a>
+            </div>
             <nav>
                 <a href="#">Merch</a>
-                <a href="members.html">Members</a>
+                <a href="#">Members</a>
                 <a href="#">Auditions</a>
             </nav>
         </header>
         <main>
-            <p>Welcome, we are <em>Never</em>, a KPOP cover group based in Calgary, AB.</p>
+            <p>
+                Formed in 2015, <em>Never</em> is a K-Pop cover dance performance crew based in Calgary, AB
+            </p><br>
+            <p>
+                <em>NE</em> stands "any" and,<br><em>VER</em> means "version"
+            </p><br>
+            <p>
+                We come together to create "any version" of various dance performances in different styles. 
+                Just like how fast the moon phases, our dancers adapt and learn quickly 
+            </p>
+            <br>
             <p>Check out our lastest cover!</p>
 
             <div class="lastest-cover">
@@ -32,20 +46,20 @@
                 </iframe>
             </div>
         </main>
-        <svg width="100" height="100">
+        <!-- <svg width="100" height="100">
             <circle cx="50" cy="50" r="40" 
             stroke="gainsboro" stroke-width="4" fill="dimgrey" />
             Sorry, your browser does not support inline SVG.
-        </svg>
+        </svg> -->
         <footer>
             <a href="https://www.instagram.com/neverofficialyyc/" target="_blank">
-                <i class="fab fa-instagram fa-lg"></i>
+                <i class="fab fa-instagram"></i>
             </a>
             <a href="https://www.facebook.com/neverofficialyyc/" target="_blank">
-                <i class="fab fa-facebook fa-lg"></i>
+                <i class="fab fa-facebook"></i>
             </a>
             <a href="https://www.youtube.com/channel/UCN76HJCEOipjDLIB5bYMexw/" target="_blank">
-                <i class="fab fa-youtube fa-lg"></i>
+                <i class="fab fa-youtube"></i>
             </a>
         </footer>
     </body>
