--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             </div>
             <nav>
                 <a href="#">Merch</a>
-                <a href="#">Members</a>
-                <a href="#">Auditions</a>
+                <a href="members.html">Members</a>
+                <a href="#auditions">Auditions</a>
             </nav>
         </header>
         <main>
@@ -30,15 +30,13 @@
                 Formed in 2015, <em>Never</em> is a K-Pop cover dance performance crew based in Calgary, AB
             </p><br>
             <p>
-                <em>NE</em> stands "any" and,<br><em>VER</em> means "version"
-            </p><br>
+                <em>NE</em> stands "any" and <em>VER</em> means "version"
+            </p>
             <p>
                 We come together to create "any version" of various dance performances in different styles. 
                 Just like how fast the moon phases, our dancers adapt and learn quickly 
-            </p>
-            <br>
-            <p>Check out our lastest cover!</p>
-
+            </p><br>
+            <p>Check out some of our lastest cover!</p><br>
             <div class="lastest-cover">
                 <iframe width="160" height="90" src="https://www.youtube.com/embed/UaDNQRjlJdo"
                 frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -46,11 +44,6 @@
                 </iframe>
             </div>
         </main>
-        <!-- <svg width="100" height="100">
-            <circle cx="50" cy="50" r="40" 
-            stroke="gainsboro" stroke-width="4" fill="dimgrey" />
-            Sorry, your browser does not support inline SVG.
-        </svg> -->
         <footer>
             <a href="https://www.instagram.com/neverofficialyyc/" target="_blank">
                 <i class="fab fa-instagram"></i>
