--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
         <link rel="icon" href="../images/never.png">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-        
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Squada+One">
-        <link rel="stylesheet" href="../styling/index.css">
+        <link rel="stylesheet" href="../styling/general.css">
     </head>
     <body>
         <header>
@@ -20,9 +19,9 @@
                 </a>
             </div>
             <nav>
-                <a href="#">Merch</a>
+                <a href="index.html">About Us</a>
                 <a href="members.html">Members</a>
-                <a href="#auditions">Auditions</a>
+                <a href="auditions.html">Auditions</a>
             </nav>
         </header>
         <main>
