--- a/members.html
+++ b/members.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <script src="https://kit.fontawesome.com/a076d05399.js"></script>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Squada+One">
-        <link rel="stylesheet" href="../styling/index.css">
+        <link rel="stylesheet" href="../styling/general.css">
         <link rel="stylesheet" href="../styling/members.css">
         <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
         <script type="text/javascript" src="../script/members.js" defer></script>
@@ -22,9 +22,9 @@
                 </a>
             </div>
             <nav>
-                <a href="#">Merch</a>
+                <a href="index.html">About Us</a>
                 <a href="members.html">Members</a>
-                <a href="#auditions">Auditions</a>
+                <a href="auditions.html">Auditions</a>
             </nav>
         </header>
         <main>
@@ -67,7 +67,8 @@
             <span class="close-modal">&times;</span>
             <div class="modal-container">
                 <img class="modal-image">
-                <div class="modal-caption">
+                <div class="modal-caption"></div>
+                <div class="modal-description"></div>
             </div>
         </div>
         
