multi-step auditions page

--- a/members.html
+++ b/members.html
@@ -22,9 +22,10 @@
                 </a>
             </div>
             <nav>
-                <a href="index.html">About Us</a>
-                <a href="members.html">Members</a>
-                <a href="auditions.html">Auditions</a>
+                <a href="index.html">about us</a>
+                <a href="members.html">members</a>
+                <a href="auditions.html">auditions</a>
+                <a href="contact.html">contact us</a>
             </nav>
         </header>
         <main>
