--- a/members.html
+++ b/members.html
@@ -24,7 +24,7 @@
             <nav>
                 <a href="index.html">about us</a>
                 <a href="members.html">members</a>
-                <a href="auditions.html">auditions</a>
+                <a href="audition.html">audition</a>
                 <a href="contact.html">contact us</a>
             </nav>
         </header>
