--- a/audition.html
+++ b/audition.html
@@ -9,6 +9,7 @@
         <script src="https://kit.fontawesome.com/a076d05399.js"></script>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Squada+One">
         <link rel="stylesheet" href="../styling/general.css">
+        <link rel="stylesheet" href="../styling/audition.css">
     </head>
     <body>
         <header>
@@ -25,24 +26,22 @@
                 <a href="contact.html">contact us</a>
             </nav>
         </header>
-        <main>
-            <p>
-                Formed in 2015, <em>Never</em> is a K-Pop cover dance performance crew based in Calgary, AB
+        <main class="main-container">
+            <h3>Audition</h3>
+            <p>We are always looking for new members!</p><br>
+            <p>Before applying, check out our 
+                <a class="faq-link" href="faq.html">FAQ</a>!
             </p><br>
-            <p>
-                <em>NE</em> stands "any" and <em>VER</em> means "version"
-            </p>
-            <p>
-                We come together to create "any version" of various dance performances in different styles. 
-                Just like how fast the moon phases, our dancers adapt and learn quickly 
-            </p><br>
-            <p>Check out some of our lastest cover!</p><br>
-            <div class="lastest-cover">
-                <iframe width="160" height="90" src="https://www.youtube.com/embed/UaDNQRjlJdo"
-                frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen>
-                </iframe>
-            </div>
+
+            <p><b>Minimum Requirement</b></p>
+            <p>You will be required to submit a video clip of you dancing</p>
+            <p>must be at least 1 minute</p>
+            <div>
+                <button class="apply-button" onclick="window.location.href='auditionform.html'">apply now</button>
+            </div><br>
+            
+            <img class="studio-pic" src="./images/studio.jpg">
+            
         </main>
         <footer>
             <a href="https://www.instagram.com/neverofficialyyc/" target="_blank">
