--- a/members.html
+++ b/members.html
@@ -29,8 +29,8 @@
             </nav>
         </header>
         <main>
-            <h2>Members</h2>
-            <p>Meet the Never family!</p>
+            <h3>Members</h3>
+            <p>Meet our members!</p>
             <div class="member-row">
                 <div class="member-column">
                     <img src="../images/members/AJ.jpg">
