added responsive logo, page transition animation and improved mobile design for members page

--- a/auditionform.html
+++ b/auditionform.html
@@ -12,7 +12,7 @@
         <script src="../script/general.js" defer></script>
         <script src="../script/auditionform.js" defer></script>
     </head>
-    <body>
+    <body class="fade">
         <header></header>
         <main>
             <form class="audition-form" method="post" enctype="text/plain">
