--- a/members.html
+++ b/members.html
@@ -12,54 +12,37 @@
         <script src="../script/general.js" defer></script>
         <script src="../script/members.js" defer></script>
     </head>
-    <body>
+    <body class="fade">
         <header></header>
         <main>
             <h3 class="page-title">Members</h3>
+            <p>Meet our dancers!</p>
             <hr class="title-divider">
-            <p>Meet our members!</p>
             <div class="member-container">
-                <img src="../images/members/AJ.jpg">
-                <img src="../images/members/Angelina.jpg">
-                <img src="../images/members/Chris.png">
-                <p>AJ</p>
-                <p>Angelina</p>
-                <p>Chris</p>
-                <img src="../images/members/Christine.jpg">
-                <img src="../images/members/Francine.png">
-                <img src="../images/members/Hayley.jpg">
-                <p>Christine</p>
-                <p>Francine</p>
-                <p>Hayley</p>
-                <img src="../images/members/Izzie.jpg">
-                <img src="../images/members/Jacky.png">
-                <img src="../images/members/Justin.png">
-                <p>Izzie</p>
-                <p>Jacky</p>
-                <p>Justin</p>
-                <img src="../images/members/Kate.jpg">
-                <img src="../images/members/Melody.jpg">
-                <img src="../images/members/Mico.jpg">
-                <p>Kate</p>
-                <p>Melody</p>
-                <p>Mico</p>
-                <img src="../images/members/Nicky.png">
-                <img src="../images/members/Paolo.png">
-                <img src="../images/members/Steph_D.Png">
-                <p>Nicky</p>
-                <p>Kyle T.</p>
-                <p>Stephanie D.</p>
-                <img src="../images/members/Steph_W.jpg">
-                <img src="../images/members/Tracey.jpg">
-                <img src="../images/members/Ian.png">
-                <p>Stephanie D.</p>
-                <p>Tracey</p>
-                <p>Ian</p>
-                <img src="../images/members/Kyara.jpg">
-                <img src="../images/members/Kyle.png">
-                <div></div>
-                <p>Kyara</p>
-                <p>Kyle L.</p>
+                <div class="member"><img src="../images/members/Paolo.jpg"><p>Kyle T.</p></div>
+                <div class="member"><img src="../images/members/Francine.jpg"><p>Francine</p></div>
+                <div class="member"><img src="../images/members/Jacky.jpg"><p>Jacky</p></div>
+                <div class="member"><img src="../images/members/Justin.jpg"><p>Justin</p></div>
+                <div class="member"><img src="../images/members/Ian.jpg"><p>Ian</p></div>
+                <div class="member"><img src="../images/members/any.jpg"><p>Julia</p></div>
+                <div class="member"><img src="../images/members/any.jpg"><p>Christine</p></div>
+                <div class="member"><img src="../images/members/any.jpg"><p>Stephanie W.</p></div>
+                <div class="member"><img src="../images/members/Angelina.jpg"><p>Angelina</p></div>
+                <div class="member"><img src="../images/members/Kyara.jpg"><p>Kyara</p></div>
+                <div class="member"><img src="../images/members/AJ.jpg"><p>AJ</p></div>
+                <div class="member"><img src="../images/members/Steph_D.jpg"><p>Stephanie D.</p></div>
+                <div class="member"><img src="../images/members/Tracey.jpg"><p>Tracey</p></div>
+                <div class="member"><img src="../images/members/Melody.jpg"><p>Melody</p></div>
+                <div class="member"><img src="../images/members/Nicky.jpg"><p>Nicky</p></div>
+                <div class="member"><img src="../images/members/Nicole.jpg"><p>Nicole</p></div>
+                <div class="member"><img src="../images/members/Kate.jpg"><p>Kate</p></div>
+                <div class="member"><img src="../images/members/any.jpg"><p>Simone</p></div>
+                <div class="member"><img src="../images/members/Izzie.jpg"><p>Izzie</p></div>
+                <div class="member"><img src="../images/members/Chris.jpg"><p>Chris</p></div>
+                <div class="member"><img src="../images/members/Kyle.jpg"><p>Kyle L.</p></div>
+                <div class="member"><img src="../images/members/any.jpg"><p>Andy</p></div>
+                <div class="member"><img src="../images/members/Mico.jpg"><p>Mico</p></div>
+                <div class="member"><img src="../images/members/Hayley.jpg"><p>Hayley</p></div>
             </div>
         </main>
         <div class="modal">
