--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
         <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
         <script src="../script/general.js" defer></script>
     </head>
-    <body>
+    <body class="fade">
         <header></header>
         <main class="main-container">
             <h3 class="page-title">Contact Us</h3>
